24:02_2025 MODIFIC MENU OPCIONES ACTUALIZADA SUBRAYADO

--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
@@ -57,7 +57,7 @@
             [class.selected]="selectedOption === 'pdf'"
             (click)="selectOption('pdf')"
           >
-            <img src="../../../../../../../assets/svg/icon_excel.svg" alt="PDF" />
+            <img class="icon-pdf" src="../../../../../../../assets/svg/icon-pdf.svg" alt="PDF" />
             <span class="text-xs uppercase text-[var(--color-principal-5)] font-semibold">
               PDF
             </span>
