--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
@@ -17,7 +17,9 @@
           <div class="grow">
             <div
               class="flex flex-col md:flex-row md:justify-end md:items-center gap-0.5 md:gap-1"
-            ></div>
+            >
+            <stats-reporte [detalleProductos]="detalleProductos" />
+          </div>
           </div>
         </div>
       </div>
@@ -80,9 +82,9 @@
         />
       </div>
 
-      <div class="apartado-stats">
+      <!-- <div class="apartado-stats">
         <stats-reporte [detalleProductos]="detalleProductos" />
-      </div>
+      </div> -->
     </div>
 
 
