--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-tabla-datos/design-page-tabla-datos.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-tabla-datos/design-page-tabla-datos.component.html
@@ -205,20 +205,21 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>stockresultante</th>
       <td mat-cell *matCellDef="let row">
         <button class="px-6 py-3 flex gap-2 align-center">
-          @if (row.stockresultante < 0) {
-            <span class="text-sm text-red-600">
+
+          @if (row.stockresultante  < 0) {
+            <span class="text-sm text-red-600 size-4">
               {{ row.stockresultante }}
             </span>
           }
 
           @if (row.stockresultante > 0) {
-            <span class="text-sm text-blue-700">
+            <span class="text-sm text-blue-700 size-4">
               {{ row.stockresultante }}
             </span>
           }
 
           @if (row.stockresultante == 0) {
-            <span class="text-sm text-gray-600">
+            <span class="text-sm text-gray-600 size-4">
               {{ row.stockresultante }}
             </span>
           }
