--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -139,7 +139,9 @@
             ObtenerDetatosInventarios($event.rucempresa, $event.idcarga)
           "
         />
-        } @if (row.estado == '0' || row.estado == '2') {  } @if
+        }
+
+        @if (row.estado == '0' || row.estado == '2') {  } @if
         (row.estado == '1') {
         <button-anular-inventario
           [idcarga]="row.idcarga"
