--- a/src/app/Ui/Shared/Components/buttons/button-nuevo/button-nuevo.component.html
+++ b/src/app/Ui/Shared/Components/buttons/button-nuevo/button-nuevo.component.html
@@ -1,22 +1,7 @@
-<button
-  type="button" class="btn btn-primary flex gap-1 justify-center items-center" data-bs-toggle="modal" data-bs-target="#registrarInventario"
-  >
-    <svg
-      class="shrink-0 size-4"
-      xmlns="http://www.w3.org/2000/svg"
-      width="24"
-      height="24"
-      viewBox="0 0 24 24"
-      fill="none"
-      stroke="currentColor"
-      stroke-width="2"
-      stroke-linecap="round"
-      stroke-linejoin="round"
-    >
-      <path d="M5 12h14" />
-      <path d="M12 5v14" />
-    </svg>
-    Nuevo
-  </button>
-
-
+<button type="button" class="btn btn-primary custom-btn" data-bs-toggle="modal" data-bs-target="#registrarInventario">
+  <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+    <path d="M5 12h14" />
+    <path d="M12 5v14" />
+  </svg>
+ Nuevo
+</button>
