24_02_2025 MODIFIC REPORTE EN PDF ARREGLADO

--- a/src/app/Ui/Modules/Carga_Inventario/Components/header-page/header-page.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/header-page/header-page.component.html
@@ -15,7 +15,8 @@
   </div>
   <div class="inline-flex gap-x-2">
     <!-- <button-descargar-plantilla /> -->
-    <button-nuevo-inventario />
+    <button-nuevo  [abrirModal]="'hs-sign-out-alert-small-window'"/>
+
   </div>
 </div>
 
