--- a/src/app/Ui/Modules/Carga_Inventario/Components/buttons/button-anular-inventario/button-anular-inventario.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/buttons/button-anular-inventario/button-anular-inventario.component.html
@@ -1,7 +1,7 @@
 <div class="px-1 py-3">
   <button
   (click)="ObtenerDetatosInventarios()"
-  class=" py-2 px-3  flex items-center justify-center gap-x-2 text-xs rounded-lg border border-gray-200 bg-white text-gray-800 hover:shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none "
+  class=" py-2 px-3  flex items-center justify-center gap-x-2 text-xs rounded-lg  bg-white text-gray-800 hover:shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none "
     type="button"
   >
   <mat-icon>delete</mat-icon>
