--- a/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
@@ -96,27 +96,6 @@
                     <!-- =================================================================================== -->
                     <!-- Detalle -->
                     <!-- =================================================================================== -->
-                    <ng-container matColumnDef="detalle">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                        Detalle
-                      </th>
-                      <td mat-cell *matCellDef="let row">
-                        <td-table-btn-detalle
-                          [idcarga]="row.idcarga"
-                          [rucempresa]="row.rucempresa"
-                          (obtenerDetalle)="
-                            ObtenerDetalleInventarios(
-                              $event.rucempresa,
-                              $event.idcarga
-                            )
-                          "
-                        />
-                      </td>
-                    </ng-container>
-
-                    <!-- =================================================================================== -->
-                    <!-- Detalle -->
-                    <!-- =================================================================================== -->
                     <ng-container matColumnDef="opciones">
                       <th mat-header-cell *matHeaderCellDef mat-sort-header>
                         Operaciones
@@ -130,7 +109,7 @@
                                   row.idcarga
                                 )
                               "
-                          class="btn py-2 px-3 inline-flex items-center gap-x-2 text-xs rounded-lg border border-gray-200 bg-white text-gray-800 hover:shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none "
+                          class="btn py-2 px-3 inline-flex items-center gap-x-2 text-xs rounded-lg  bg-white text-gray-800 hover:shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none "
                             type="button"
                             data-bs-toggle="offcanvas"
                             data-bs-target="#disenoreporte"
