24_02_2025 MODIFIC STATUS EN REPORTE

--- a/src/app/Ui/Modules/reportes/components/stats-reporte/stats-reporte.component.html
+++ b/src/app/Ui/Modules/reportes/components/stats-reporte/stats-reporte.component.html
@@ -3,7 +3,7 @@
     <span>CONTEOS</span>
   </h1> -->
 
-  <div class="flex gap-4 mt-4">
+  <div class="flex gap-4">
     <!-- Exactos -->
     <div class="flex-1 min-h-[40px] rounded-2xl bg-[#0158DD] shadow-md px-4 flex items-center justify-center gap-x-4">
       <p class="text-sm mb-0 uppercase tracking-wide text-gray-100">Exactos:</p>
