--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
@@ -16,9 +16,9 @@
         >
           <div class="grow">
             <div
-              class="flex flex-col md:flex-row md:justify-end md:items-center gap-0.5 md:gap-1"
+              class="flex flex-col md:flex-row md:justify-start md:items-center gap-0.5 md:gap-1"
             >
-            <!-- <stats-reporte [detalleProductos]="detalleProductos" /> -->
+            <stats-reporte [detalleProductos]="detalleProductos" />
           </div>
           </div>
         </div>
