24_02_2025 Button export cambio de color

--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
@@ -72,7 +72,7 @@
           (columnasSeleccionadas)="recibirColumnasSeleccionadas($event)"
         />
         <hr>
-        <button (click)="exportar()" class="button-exportar">EXPORTAR</button>
+        <button (click)="exportar()" class="button-exportar text-white">EXPORTAR</button>
       </div>
 
       <div class="apartado-productos">
