--- a/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.css
+++ b/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.css
@@ -9,7 +9,7 @@ table  th  {
 
 .container-data {
   display: flex;
-  gap: .1rem;
+  gap: .4rem;
   align-items: center;
 }
 
@@ -18,8 +18,6 @@ table  th  {
   height: 2.4rem;
   display: grid;
   place-content: center;
-  border-radius: 50%;
-  /* background-color: #20477E; */
 }
 
 .rol i {
@@ -69,4 +67,14 @@ table  th  {
 
 .container-matmenu button  mat-icon {
   color: #20477E;
+}
+
+.form-check-input {
+  width: 2.3rem;
+  height: 1.3rem;
+}
+
+.form-check-input:checked {
+  background-color: #0158DD;
+  border-color: #0158DD;
 }
