--- a/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.html
+++ b/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.html
@@ -27,9 +27,7 @@
       <th mat-header-cell *matHeaderCellDef class="mat-primary">Cargo</th>
       <td class="rol" mat-cell *matCellDef="let element">
         <div class="container-data">
-          <div class="container-icon">
-            <i class="uil uil-briefcase-alt"></i>
-          </div>
+          <mat-icon>badge</mat-icon>
           {{ element.cargo }}
         </div>
       </td>
@@ -39,19 +37,37 @@
     <!-- Estado -->
     <!-- =================================================================================== -->
     <ng-container matColumnDef="estado">
-      <th mat-header-cell *matHeaderCellDef class="mat-accent">Estado</th>
+      <th mat-header-cell *matHeaderCellDef class="mat-accent"></th>
       <td mat-cell *matCellDef="let element">
         <div class="px-6 py-3">
           @if (element.estado == "1") {
           <td-estado-1 />
           } @if (element.estado == "2") {
           <td-estado-2 />
-          } @if (element.estado != "1") {
-          <td-estado-3 [estado]="'Inactivo'" />
           }
         </div>
       </td>
     </ng-container>
+
+    <!-- =================================================================================== -->
+    <!-- Estado btn-->
+    <!-- =================================================================================== -->
+    <ng-container matColumnDef="btnestado">
+      <th mat-header-cell *matHeaderCellDef class="mat-accent">Estado</th>
+      <td mat-cell *matCellDef="let element">
+        <div class="px-6 py-3">
+          <div class="form-check form-switch">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              [checked]="element.estado === '1'"
+              (change)="cambiarEstadoUsuario(element)"
+            />
+          </div>
+        </div>
+      </td>
+    </ng-container>
+
 
     <!-- =================================================================================== -->
     <!-- Nombres -->
@@ -60,19 +76,9 @@
       <th mat-header-cell *matHeaderCellDef class="mat-primary">Nombres</th>
       <td class="rol" mat-cell *matCellDef="let element">
         <div class="container-data">
-          {{ element.nombreusuario }}
-        </div>
-      </td>
-    </ng-container>
-
-    <!-- =================================================================================== -->
-    <!-- Apellidos -->
-    <!-- =================================================================================== -->
-    <ng-container matColumnDef="apellidos">
-      <th mat-header-cell *matHeaderCellDef class="mat-primary">Apellido</th>
-      <td class="rol" mat-cell *matCellDef="let element">
-        <div class="container-data">
-          {{ element.apellido }}
+          <mat-icon>person</mat-icon>
+          {{ element.nombreusuario.toUpperCase() }}
+          {{ element.apellido.toUpperCase() }}
         </div>
       </td>
     </ng-container>
