--- a/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.html
+++ b/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.html
@@ -26,10 +26,78 @@
     <ng-container matColumnDef="cargo">
       <th mat-header-cell *matHeaderCellDef class="mat-primary">Cargo</th>
       <td class="rol" mat-cell *matCellDef="let element">
-        <div class="container-data text-xs">
+        @if (!element.editandoCargo) {
+        <div class="container-data text-xs" (dblclick)="editarCargo(element)">
           <mat-icon class="cargo">badge</mat-icon>
-          {{ element.cargo }}
+          {{ element.cargo?.toUpperCase() }}
         </div>
+        } @if (element.editandoCargo) {
+        <div>
+          <mat-form-field>
+            <mat-label>Cargos</mat-label>
+            <mat-select
+              [(value)]="element.cargoTemporal"
+              (selectionChange)="guardarCargo(element)"
+            >
+              <mat-option
+                (click)="cerrarEdit(element)"
+                [value]="element.cargo"
+                >{{ element.cargo }}</mat-option
+              >
+              <hr />
+              @for (rol of DatosRoles; track rol) {
+              <mat-option [value]="rol.rol">{{ rol.rol }}</mat-option>
+              }
+            </mat-select>
+          </mat-form-field>
+        </div>
+        }
+      </td>
+    </ng-container>
+
+    <!-- =================================================================================== -->
+    <!-- Empresa -->
+    <!-- =================================================================================== -->
+    <ng-container matColumnDef="empresa">
+      <th mat-header-cell *matHeaderCellDef class="mat-primary">Empresa</th>
+      <td class="rol" mat-cell *matCellDef="let element">
+        <!-- Vista normal -->
+        @if (!element.editandoEmpresa) {
+        <div class="container-data text-xs" (dblclick)="editarEmpresa(element)">
+          <mat-icon class="empresa">work</mat-icon>
+          {{ element.rucempresa }}
+        </div>
+        }
+
+        <!-- Edición -->
+        @if (element.editandoEmpresa) {
+        <div>
+          <mat-form-field>
+            <mat-label>Empresas</mat-label>
+            <mat-select
+              [(value)]="element.empresaTemporal"
+              (selectionChange)="guardarEmpresa(element)"
+            >
+              <!-- Opción actual -->
+              <mat-option [value]="element.rucempresa">{{
+                element.rucempresa
+              }}</mat-option>
+              <hr />
+
+
+              <ng-container >
+                @for ( empresa of DatosEmpresas; track empresa) {
+                <mat-option [value]="empresa.rucempresa">
+                  {{ empresa.rucempresa }} - {{ empresa.razonsocial }}
+                </mat-option>
+                <hr>
+              }
+              </ng-container>
+
+            </mat-select>
+          </mat-form-field>
+        </div>
+        }
       </td>
     </ng-container>
 
@@ -72,85 +140,58 @@
     <!-- Nombres -->
     <!-- =================================================================================== -->
     <!-- =================================================================================== -->
-<!-- Nombres -->
-<!-- =================================================================================== -->
-<ng-container matColumnDef="nombres">
-  <th mat-header-cell *matHeaderCellDef class="mat-primary">Nombres</th>
-  <td class="rol" mat-cell *matCellDef="let element">
-    @if (!element.editando) {
-      <div class="container-data text-xs"  (dblclick)="editarNombre(element)">
-        <mat-icon class="person">person</mat-icon>
-        {{ element.nombreusuario?.toUpperCase() }}
-      </div>
-    }
-
-
-    @if (element.editando) {
-      <div>
-        <mat-form-field class="example-full-width">
-          <mat-label>Nombre</mat-label>
-          <input
-          matInput
-          [(ngModel)]="element.nombreTemporal"
-          (keydown.enter)="guardarNombre(element)"
-          (blur)="guardarNombre(element)"
-          autofocus
-        />
-        </mat-form-field>
-
-      </div>
-    }
-
-  </td>
-</ng-container>
-
-
-<ng-container matColumnDef="apellidos">
-  <th mat-header-cell *matHeaderCellDef class="mat-primary">Nombres</th>
-  <td class="rol" mat-cell *matCellDef="let element">
-    @if (!element.editandoApellido) {
-      <div class="container-data text-xs" (dblclick)="editarApellidos(element)">
-        <mat-icon class="person">person</mat-icon>
-          {{ element.apellido?.toUpperCase() }}
-      </div>
-    }
-
-
-    @if (element.editandoApellido) {
-      <div>
-        <mat-form-field class="example-full-width">
-          <mat-label>Nombre</mat-label>
-          <input
-          matInput
-          [(ngModel)]="element.apellidoTemporal"
-          (keydown.enter)="guardarApellidos(element)"
-          (blur)="guardarApellidos(element)"
-          autofocus
-        />
-        </mat-form-field>
-
-      </div>
-    }
-
-  </td>
-</ng-container>
-
-
-
+    <!-- Nombres -->
     <!-- =================================================================================== -->
-    <!-- Fecha registro -->
-    <!-- =================================================================================== -->
-    <ng-container matColumnDef="FCreación">
-      <th mat-header-cell *matHeaderCellDef class="mat-primary">F. Registro</th>
+    <ng-container matColumnDef="nombres">
+      <th mat-header-cell *matHeaderCellDef class="mat-primary">Nombres</th>
       <td class="rol" mat-cell *matCellDef="let element">
-        <div class="container-data text-xs">
-          <mat-icon class="date">event</mat-icon>
-          {{
-            element.fechacreacion
-              ? (element.fechacreacion | date : "dd/MM/yyyy")
-              : "-"
-          }}
+        @if (!element.editando) {
+        <div class="container-data text-xs" (dblclick)="editarNombre(element)">
+          <mat-icon class="person">person</mat-icon>
+          {{ element.nombreusuario?.toUpperCase() }}
         </div>
+        } @if (element.editando) {
+        <div>
+          <mat-form-field class="example-full-width">
+            <mat-label>Nombre</mat-label>
+            <input
+              matInput
+              [(ngModel)]="element.nombreTemporal"
+              (keydown.enter)="guardarNombre(element)"
+              (blur)="guardarNombre(element)"
+              autofocus
+            />
+          </mat-form-field>
+        </div>
+        }
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="apellidos">
+      <th mat-header-cell *matHeaderCellDef class="mat-primary">Nombres</th>
+      <td class="rol" mat-cell *matCellDef="let element">
+        @if (!element.editandoApellido) {
+        <div
+          class="container-data text-xs"
+          (dblclick)="editarApellidos(element)"
+        >
+          <mat-icon class="person">person</mat-icon>
+          {{ element.apellido?.toUpperCase() }}
+        </div>
+        } @if (element.editandoApellido) {
+        <div>
+          <mat-form-field class="example-full-width">
+            <mat-label>Nombre</mat-label>
+            <input
+              matInput
+              [(ngModel)]="element.apellidoTemporal"
+              (keydown.enter)="guardarApellidos(element)"
+              (blur)="guardarApellidos(element)"
+              autofocus
+            />
+          </mat-form-field>
+        </div>
+        }
       </td>
     </ng-container>
 
@@ -185,10 +226,7 @@
               data-bs-toggle="modal"
               [attr.data-bs-target]="abrirModalDetalle"
             >
-              <mat-icon
-                class="btn-detalle"
-                >visibility</mat-icon
-              >
+              <mat-icon class="btn-detalle">visibility</mat-icon>
               Ver detalle
             </button>
           </div>
