--- a/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.html
+++ b/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.html
@@ -200,7 +200,7 @@
           <div class="px-1 py-1">
             <button
               (dblclick)="editarContrasenia(element)"
-              class="btn py-2 px-3 inline-flex items-center gap-x-2 text-xs rounded-lg bg-white text-gray-800 hover:shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none"
+              class="clave btn py-2 px-3 inline-flex items-center gap-x-2 text-xs rounded-lg bg-white text-gray-800 hover:shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none"
               type="button"
             >
               <mat-icon>key</mat-icon>
