27_02_2025 CORRECION DE TEXTOS EN CARGA ARCHIVO

--- a/src/app/Ui/Modules/Carga_Inventario/Components/listas/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/listas/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -89,7 +89,7 @@
   <!-- Fecha registro-->
   <!-- =================================================================================== -->
   <ng-container matColumnDef="fecharegistro">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha registro</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha carga</th>
     <td mat-cell *matCellDef="let row">
       <button class="fecharegistro px-1 py-3 flex gap-2 align-center">
         <mat-icon>event</mat-icon>
