--- a/src/app/Ui/Modules/Carga_Inventario/Components/header-page/header-page.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/header-page/header-page.component.html
@@ -9,7 +9,7 @@
       Carga tus inventarios de
       <a
         class="inline-flex items-center gap-x-1.5 text-gray-100 decoration-2 hover:underline focus:outline-none focus:underline font-medium"
-        >manera sensilla</a
+        >manera sencilla</a
       >
     </p>
   </div>
