27_02_2025 CAMBIO DISENIO PAGINA USUARIO

--- a/src/app/Ui/Modules/Carga_Inventario/Components/listas/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/listas/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -42,7 +42,7 @@
   <button-nuevo  [abrirModal]="'hs-sign-out-alert-small-window'"/>
 </div>
 
-<table mat-table [dataSource]="dataSource" matSort>
+<table mat-table [dataSource]="dataSource">
 
     <!-- =================================================================================== -->
   <!-- Fecha registro-->
