27_02_2025 CAMBIO DISENIO PAGINA USUARIO colores

--- a/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.html
+++ b/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.html
@@ -16,7 +16,7 @@
 
 
 <section>
-  <div class="max-w-[100rem] py-10 lg:py-4 mx-auto">
+  <div class="max-w-[100rem] py-6 lg:py-4 mx-auto">
     <div class="flex flex-col">
       <div class="-m-1.5 overflow-x-auto">
         <div class="p-1.5 min-w-full inline-block align-middle">
@@ -285,7 +285,7 @@
 <!-- =================================================================================== -->
 <!-- Footer -->
 <!-- =================================================================================== -->
-<footer-general />
+<!-- <footer-general /> -->
 
 <!-- =================================================================================== -->
 <!-- Detalle usuario -->
