--- a/src/app/Ui/Modules/configuration/Usuarios/page/usuario-page/usuario-page.component.html
+++ b/src/app/Ui/Modules/configuration/Usuarios/page/usuario-page/usuario-page.component.html
@@ -37,8 +37,8 @@
 
 <!-- ========== START - TABLA ========== -->
 <div class="w-full lg:ps-64">
-  <div class="w-full lg:ps-0 bg-fondo-datos">
-    <div class="p-4 sm:p-6 space-y-4 sm:space-y-6">
+  <div class="w-full lg:ps-0">
+    <div class="px-4 sm:px-4  sm:pt-4 space-y-4 sm:space-y-6">
       <table-usuarios [DatosUsuario]="DatosUsuarios" />
     </div>
   </div>
